# marionette-test

./: .gitignore  README.md  pyproject.toml
.github/workflows/: screenshot.yml
maildata/: database.db
profiles/: .gitignore
profiles/website/: addonStartup.json.lz4  bounce-tracking-protection.sqlite  cert9.db  compatibility.ini  cookies.sqlite  encrypted-openpgp-passphrase.txt  extension-preferences.json  extensions.json  folderCache.json  folderTree.json  global-messages-db.sqlite  handlers.json  key4.db  logins.json  permissions.sqlite  pkcs11.txt  prefs.js  search.json.mozlz4  session.json  session.json.backup  storage.sqlite  times.json  xulstore.json
profiles/website/ImapMail/: 127.0.0.1.msf
profiles/website/ImapMail/127.0.0.1/: Archives.msf  Drafts.msf  INBOX  INBOX.msf  Junk.msf  Sent.msf  Templates.msf
profiles/website/Mail/Local Folders/: Trash.msf  Unsent Messages.msf
profiles/website/Mail/smart mailboxes/: Archives.msf  Drafts.msf  Inbox.msf  Junk.msf  Sent.msf  Templates.msf  Trash.msf  tags.msf
profiles/website/Mail/smart mailboxes/tags.sbd/: $label1.msf  $label2.msf  $label3.msf  $label4.msf  $label5.msf  party_&2dzfiq-.msf  upgrade.msf
profiles/website/chrome/: userChrome.css
profiles/website/storage/default/https+++www.mozilla.org/: .metadata-v2
profiles/website/storage/default/https+++www.mozilla.org/ls/: data.sqlite
profiles/website/storage/permanent/chrome/: .metadata-v2
src/marionette/: background-image.html  fake_mail.yaml  main.py  send_fake_mail.py
(+1 files in other folders)
